--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 authors = ["Riccardo Mazzarini <me@noib3.dev>"]
 
 [features]
-default = ["fzf"]
-fzf = []
+default = ["fzf-v1"]
+fzf-v1 = []
 
 [dependencies]
