--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,14 @@ jobs:
       - uses: dtolnay/rust-toolchain@nightly
       - run: cargo test --features tests --no-fail-fast
 
+  bench:
+    name: bench
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: dtolnay/rust-toolchain@nightly
+      - run: cargo bench --all-features --no-run
+
   format:
     name: format
     runs-on: ubuntu-latest
