--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "norm"
+name = "norms"
 version = "0.1.0"
 edition = "2021"
 authors = ["Riccardo Mazzarini <me@noib3.dev>"]
@@ -15,6 +15,9 @@ exclude = ["/.github", "/benches", "/fuzz", "/tests"]
 [package.metadata.docs.rs]
 features = ["fzf-v1", "fzf-v2"]
 rustdoc-args = ["--cfg", "docsrs"]
+
+[lib]
+name = "norm"
 
 [features]
 fzf-v1 = ["__any-metric"]
