--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "norms"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["Riccardo Mazzarini <me@noib3.dev>"]
 description = "A collection of distance metrics on strings"
@@ -10,7 +10,7 @@ readme = "README.md"
 license = "MIT"
 keywords = ["text", "fuzzy", "match", "search", "fzf"]
 categories = ["algorithms"]
-exclude = ["/.github", "/benches", "/fuzz", "/tests"]
+exclude = ["/.github", "/fuzz", "CHANGELOG.md"]
 
 [package.metadata.docs.rs]
 features = ["fzf-v1", "fzf-v2"]
@@ -27,13 +27,40 @@ fzf-v2 = ["__any-metric"]
 __any-metric = []
 __benches = []
 __into-score = []
-__tests = []
+__tests = ["fzf-v1", "fzf-v2"]
 
 [dependencies]
 memchr = "2"
 
 [dev-dependencies]
 criterion = "0.5"
+
+[[test]]
+name = "fzf_common"
+required-features = ["__tests"]
+
+[[test]]
+name = "fzf_v1"
+required-features = ["__tests"]
+
+[[test]]
+name = "fzf_v2"
+required-features = ["__tests"]
+
+[[bench]]
+name = "fzf_common"
+harness = false
+required-features = ["__benches"]
+
+[[bench]]
+name = "fzf_v1"
+harness = false
+required-features = ["__benches"]
+
+[[bench]]
+name = "fzf_v2"
+harness = false
+required-features = ["__benches"]
 
 [[example]]
 name = "cities"
